Cadastrar um novo membro no time

--- a/Vidracaria_Portal/Views/Administrador/Home.cshtml
+++ b/Vidracaria_Portal/Views/Administrador/Home.cshtml
@@ -49,4 +49,11 @@
 
 @section Scripts{
     <script src="Home.js"></script>
+    <script>
+        @*window.load = function () {
+            @if (!string.IsNullOrEmpty(Model.listaEstoque)) {
+                alert("uau");
+            }
+        }*@
+    </script>
  }
