--- a/Vidracaria_Portal/Views/Galeria/Create.cshtml
+++ b/Vidracaria_Portal/Views/Galeria/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Vidracaria_Portal.Models.Administrador.Cadastros.GaleriaModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
