--- a/Vidracaria_Portal/Views/Galeria/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Galeria/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Vidracaria_Portal.Models.Administrador.Cadastros.GaleriaModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
