--- a/Vidracaria_Portal/Views/Home/Sobre.cshtml
+++ b/Vidracaria_Portal/Views/Home/Sobre.cshtml
@@ -1,4 +1,6 @@
-﻿@{ ViewData["title"] = "Sobre";
+﻿@model IEnumerable<Vidracaria_Portal.Models.Administrador.Cadastros.TimeModel>
+
+@{ ViewData["title"] = "Sobre";
     Layout = "~/Views/Shared/_LayoutCliente.cshtml"; }
 
 @section Styles{
@@ -16,7 +18,6 @@
             font-size: 18px;
             margin-top: 8px;
         }
-
     </style>
 }
 
@@ -87,62 +88,21 @@
             <h2>Nosso Time</h2>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="member">
-                    <img src="~/img/Time/Rafael.jpg" alt="">
-                    <h4>Rafael Martini Gigliotti</h4>
-                    <span style="font-size: 16px; color: #343a40">Chefe Executivo</span>
-                    <div class="social">
-                        <a target="_blank" href="https://www.facebook.com/rafael.gigliotti.1"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/rafaelvidracaria/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+            @foreach (var time in Model)
+            {
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                    <div class="member">
+                        <img src="@( System.IO.File.Exists(ViewData["CaminhoImagem"] + "/" + time.Imagem) ?
+                                                Url.Content("~/" + time.Imagem) : Url.Content("/imagensSaves/sem_foto.png") )"  alt="">
+                        <h4>@(time.NomeTime)</h4>
+                        <span style="font-size: 16px; color: #343a40">@(time.Cargo)</span>
+                        <div class="social">
+                            <a target="_blank" href="@(time.LinkFacebook)"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
+                            <a target="_blank" href="@(time.LinkImagem)"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="member">
-                    <img src="~/img/Time/Samantta.jpg" alt="">
-                    <h4>Samantta Cristina Tavano</h4>
-                    <span style="font-size: 16px; color: #343a40">Gerente Administrativa</span>
-                    <div class="social">
-                        <a target="_blank" href="https://www.facebook.com/samantta.tavano"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/samanttagigliotti/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="member">
-                    <img src="~/img/Time/junior.jpg" alt="">
-                    <h4>Junior Silverio</h4>
-                    <span style="font-size: 16px; color: #343a40">Colaborador</span>
-                    <div class="social">
-                        <a target="_blank" href="https://www.facebook.com/juniinhuu.silveerio"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/juniorr_silverio/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="margin: 0 auto; display: flex; justify-content: space-evenly;">
-                <div class="member">
-                    <img src="~/img/Time/Gabriel.jpg" alt="">
-                    <h4>Gabriel Pastore</h4>
-                    <span style="font-size: 16px; color: #343a40">Colaborador</span>
-                    <div class="social">
-                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100007930717601"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/gabrielpastore1074/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="margin: 0 auto; display: flex; justify-content: space-evenly;">
-                <div class="member">
-                    <img src="~/img/Time/antonio.jpeg" alt="">
-                    <h4>Antônio</h4>
-                    <span style="font-size: 16px; color: #343a40">Colaborador</span>
-                    <div class="social">
-
-                    </div>
-                </div>
-            </div>
-
+            }
         </div>
 
     </div>
