--- a/Vidracaria_Portal/Views/VidrosTemperados/Create.cshtml
+++ b/Vidracaria_Portal/Views/VidrosTemperados/Create.cshtml
@@ -41,12 +41,12 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label asp-for="EstoqueMaximo" class="control-label"></label>
-                            <input id="txtEstoqueMaximo" asp-for="EstoqueMaximo" class="form-control" />
+                            <input id="estoqueMaximo" asp-for="EstoqueMaximo" class="form-control" />
                             <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-4">
                             <label asp-for="EstoqueMinimo" class="control-label"></label>
-                            <input id="txtEstoqueMinimo"  asp-for="EstoqueMinimo" class="form-control" />
+                            <input id="estoqueMinimo"  asp-for="EstoqueMinimo" class="form-control" />
                             <span asp-validation-for="EstoqueMinimo" class="text-danger"></span>
                         </div>
                     </div>
@@ -103,6 +103,13 @@
                     }
                 });
             });
+
+            var estoqueMinimo = document.getElementById("estoqueMinimo");
+            var estoqueMaximo = document.getElementById("estoqueMaximo");
+
+            if (estoqueMinimo.value >= estoqueMaximo.value) {
+                alert("eae caraio");
+            }
 
             $(".mask").mask('000.000.000.000.000.00', { reverse: true });
         });
