--- a/Vidracaria_Portal/Views/VidrosTemperados/Edit.cshtml
+++ b/Vidracaria_Portal/Views/VidrosTemperados/Edit.cshtml
@@ -42,8 +42,8 @@
                             <span asp-validation-for="ExpessuraId" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-4">
-                            <label asp-for="EstoqueMaximo" class="control-label"></label>
-                            <input asp-for="EstoqueMaximo" class="form-control" />
+                            <label id="estoqueMinimo" asp-for="EstoqueMaximo" class="control-label"></label>
+                            <input id="estoqueMaximo" asp-for="EstoqueMaximo" class="form-control" />
                             <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-4">
@@ -55,12 +55,12 @@
                     <div style="display: flex;">
                         <div class="form-group col-md-6">
                             <label asp-for="PrecoVenda" class="control-label"></label>
-                            <input asp-for="PrecoVenda" class="form-control mask" />
+                            <input id="precoVenda" asp-for="PrecoVenda" class="form-control mask" />
                             <span asp-validation-for="PrecoVenda" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="PrecoFabrica" class="control-label"></label>
-                            <input asp-for="PrecoFabrica" class="form-control mask" />
+                            <input id="PrecoFabrica" asp-for="PrecoFabrica" class="form-control mask" />
                             <span asp-validation-for="PrecoFabrica" class="text-danger"></span>
                         </div>
                     </div>
