--- a/Vidracaria_Portal/Views/Time/Create.cshtml
+++ b/Vidracaria_Portal/Views/Time/Create.cshtml
@@ -18,8 +18,9 @@
                             <span asp-validation-for="NomeTime" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="CargoId" class="control-label"></label>
-                            <select asp-for="CargoId" class="form-control" asp-items="ViewBag.CargoId"></select>
+                            <label asp-for="Cargo" class="control-label">Cargo </label>
+                            <input asp-for="Cargo" class="form-control" />
+                            <span asp-validation-for="Cargo" class="text-danger"></span>
                         </div>
                     </div>
                     <div style="display: flex;">
@@ -29,7 +30,7 @@
                             <span asp-validation-for="LinkFacebook" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="LinkImagem" class="control-label">LinkInstagram</label>
+                            <label asp-for="LinkImagem" class="control-label">Link Instagram</label>
                             <input asp-for="LinkImagem" class="form-control" />
                             <span asp-validation-for="LinkImagem" class="text-danger"></span>
                         </div>
