--- a/Vidracaria_Portal/Views/Time/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Time/Edit.cshtml
@@ -19,8 +19,9 @@
                             <span asp-validation-for="NomeTime" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="CargoId" class="control-label"></label>
-                            <select asp-for="CargoId" class="form-control" asp-items="ViewBag.CargoId"></select>
+                            <label asp-for="Cargo" class="control-label">Cargo </label>
+                            <input asp-for="Cargo" class="form-control" />
+                            <span asp-validation-for="Cargo" class="text-danger"></span>
                         </div>
                     </div>
                     <div style="display: flex;">
