--- a/Vidracaria_Portal/Views/Time/Index.cshtml
+++ b/Vidracaria_Portal/Views/Time/Index.cshtml
@@ -23,11 +23,9 @@
                         <img style="width: 100%; height: 200px; border-radius: 50%; margin-top: 10px;" src="@( System.IO.File.Exists(ViewData["CaminhoImagem"] + "/" + item.Imagem) ?
                     Url.Content("~/" + item.Imagem) : Url.Content("/imagensSaves/sem_foto.png") )" alt="">
                         <h4 style="margin-top: 10px;"> @Html.DisplayFor(modelItem => item.NomeTime)</h4>
-                        <span style="font-size: 16px; color: #343a40">@Html.DisplayFor(modelItem => item.Cargo)</span>
-                        <div class="social">
-                            <p style="margin-bottom: 0"> <b>Link facebook: </b> @Html.DisplayFor(modelItem => item.LinkFacebook) </p>
-                            <p style="margin-bottom: 0"> <b>Link Instagram:</b>  @Html.DisplayFor(modelItem => item.LinkImagem) </p>
-                        </div>
+                        <h4 style="margin-top: 10px;"> @Html.DisplayFor(modelItem => item.Cargo)</h4>
+                        <h4 style="margin-top: 10px;"> <b>Link Face: </b>@Html.DisplayFor(modelItem => item.LinkFacebook)</h4>
+                        <h4 style="margin-top: 10px;"> <b>Link Insta: </b>@Html.DisplayFor(modelItem => item.LinkImagem)</h4>
                         <div class="social" style="margin-top: 15px;">
                             <a asp-action="Edit" asp-route-id="@item.CodigoTIme"><i class="fa fa-edit td-icones" style="color:black;" data-toggle="tooltip" data-placement="right" title="Editar"></i></a>
                             <a asp-action="Delete" asp-route-id="@item.CodigoTIme"><i class="fa fa-trash-alt td-icones" style="color:darkred;" data-toggle="tooltip" data-placement="left" title="Deletar"></i></a>
