--- a/Vidracaria_Portal/Views/Home/Home.cshtml
+++ b/Vidracaria_Portal/Views/Home/Home.cshtml
@@ -406,7 +406,7 @@
                             <textarea style="width:100%;" id="txtMensagem" placeholder="Ex. Sua mensagem"></textarea>
                         </div>
                         <div id="botaoWhats">
-                            <div class="text-center" style="margin-top: 20px; color: white;cursor: pointer"><a href='javascript:void(0)' onclick="onClick_EnviarMensagemWhatsapp()" class="btn btn-danger" id="linkWhats">Enviar WhatsApp</a></div>
+                            <div class="text-center" style="margin-top: 20px; color: white;cursor: pointer"><a href='javascript:void(0)' onclick="onClick_EnviarMensagemWhatsapp()" class="btn btn-danger" id="linkWhats" target="_blank">Enviar WhatsApp</a></div>
                         </div>
                     </div>
                 </div>
